refactor and rework some movement modules